# typst

./: Cargo.toml  flake.nix
.github/workflows/: ci.yml  release.yml
crates/typst-cli/src/: compile.rs  eval.rs  update.rs  world.rs
crates/typst-html/src/: encode.rs  link.rs
crates/typst-ide/src/: complete.rs  jump.rs  tests.rs
crates/typst-kit/src/: datetime.rs  diagnostics.rs  download.rs  package.rs
crates/typst-layout/src/inline/: linebreak.rs
crates/typst-layout/src/pages/: mod.rs
crates/typst-library/: Cargo.toml
crates/typst-library/src/: lib.rs
crates/typst-library/src/foundations/: datetime.rs  func.rs  plugin.rs
crates/typst-library/src/introspection/: introspector.rs
crates/typst-library/src/layout/: align.rs
crates/typst-library/src/loading/: audio.rs  mod.rs  tts.rs
crates/typst-library/src/math/: accent.rs
crates/typst-library/src/model/: bibliography.rs
crates/typst-library/src/text/: mod.rs  raw.rs
crates/typst-library/src/visualize/: color.rs
crates/typst-utils/src/: lib.rs
docs/: Cargo.toml
docs/src/: example.rs  html.rs  world.rs
tests/fuzz/src/: compile.rs  lib.rs
tests/src/: world.rs
