[workspace]
members = ["crates/*", "docs", "tests", "tests/fuzz"]
default-members = ["crates/typst-cli"]
resolver = "2"

[workspace.package]
version = "0.14.2"
rust-version = "1.92" # also change in ci.yml
authors = ["The Typst Project Developers"]
edition = "2024"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
categories = ["compilers"]
keywords = ["typst"]
readme = "README.md"

[workspace.dependencies]
typst = { path = "crates/typst", version = "0.14.2" }
typst-cli = { path = "crates/typst-cli", version = "0.14.2" }
typst-eval = { path = "crates/typst-eval", version = "0.14.2" }
typst-html = { path = "crates/typst-html", version = "0.14.2" }
typst-ide = { path = "crates/typst-ide", version = "0.14.2" }
typst-kit = { path = "crates/typst-kit", version = "0.14.2" }
typst-layout = { path = "crates/typst-layout", version = "0.14.2" }
typst-library = { path = "crates/typst-library", version = "0.14.2" }
typst-macros = { path = "crates/typst-macros", version = "0.14.2" }
typst-pdf = { path = "crates/typst-pdf", version = "0.14.2" }
typst-realize = { path = "crates/typst-realize", version = "0.14.2" }
typst-render = { path = "crates/typst-render", version = "0.14.2" }
typst-svg = { path = "crates/typst-svg", version = "0.14.2" }
typst-syntax = { path = "crates/typst-syntax", version = "0.14.2" }
typst-timing = { path = "crates/typst-timing", version = "0.14.2" }
typst-utils = { path = "crates/typst-utils", version = "0.14.2" }
typst-assets = { git = "https://github.com/typst/typst-assets", rev = "0bbb3f7" }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "fe6cad9" }
arrayvec = "0.7.6"
az = "1.2.1"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
bumpalo = { version = "3.19.0", features = ["boxed", "collections"] }
bytemuck = "1.24.0"
chinese-number = { version = "0.7.7", default-features = false, features = ["number-to-chinese"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
ciborium = "0.2.2"
clap = { version = "4.5.50", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.59"
clap_mangen = "0.2.31"
codespan-reporting = "0.13.1"
codex = "0.2.0"
color-print = "0.3.7"
comemo = "0.5.0"
csv = "1.4.0"
ctrlc = "3.5.0"
dirs = "6.0.0"
ecow = { version = "0.2.6", features = ["serde"] }
either = "1.15.0"
fastrand = "2.3.0"
flate2 = "1.1.5"
fontdb = { version = "0.23.0", default-features = false }
fs_extra = "1.3.0"
rustc-hash = "2.1.1"
glidesort = "0.1.2"
hayagriva = "0.9.1"
hayro = { version = "0.4.0", default-features = false }
hayro-svg = { version = "0.2.0", default-features = false }
hayro-syntax = "0.4.0"
heck = "0.5.0"
hypher = "0.1.6"
icu_properties = { version = "2.1.2", features = ["serde"] }
icu_provider = { version = "2.1.1", features = ["sync"] }
icu_provider_adapters = "2.1.1"
icu_provider_blob = "2.1.1"
icu_segmenter = { version = "2.1.1", features = ["serde"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
indexmap = { version = "2.12.1", features = ["serde"] }
infer = { version = "0.19.0", default-features = false }
kamadak-exif = "0.6.1"
# kokoro-tts = { git = "https://github.com/IuvenisSapiens/kokoro.git", branch = "master" }
# rodio = "0.21.1"
# tokio = { version = "1.48.0", features = ["full"] }
krilla = { git = "https://github.com/LaurenzV/krilla", rev = "84c6332", default-features = false, features = ["raster-images", "comemo", "rayon", "pdf"] }
krilla-svg = { git = "https://github.com/LaurenzV/krilla", rev = "84c6332" }
kurbo = "0.13.0"
libfuzzer-sys = "0.4.10"
lipsum = "0.9.1"
memchr = "2.7.6"
native-tls = "0.2.14"
notify = "8.2.0"
once_cell = "1.21.3"
open = "5.3.2"
openssl = "0.10.74"
oxipng = { version = "9.1.5", default-features = false, features = ["filetime", "parallel", "zopfli"] }
palette = { version = "0.7.6", default-features = false, features = ["approx", "libm"] }
parking_lot = "0.12.5"
pathdiff = "0.2.3"
phf = { version = "0.13.1", features = ["macros"] }
pixglyph = "0.6.0"
png = "0.17.16"
portable-atomic = "1.11.1"
proc-macro2 = "1.0.103"
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
qcms = "0.3.0"
quote = "1.0.41"
rayon = "1.11.0"
regex = "1.12.2"
regex-syntax = "0.8.8"
resvg = { version = "0.45.1", default-features = false, features = ["raster-images"] }
roxmltree = "0.20.0"
rust_decimal = { version = "1.39.0", default-features = false, features = ["maths"] }
rustybuzz = "0.20.1"
same-file = "1.0.6"
self-replace = "1.5.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
shell-escape = "0.1.5"
sigpipe = "0.1.3"
siphasher = "1.0.1"
smallvec = { version = "1.15.1", features = ["union", "const_generics", "const_new"] }
stacker = "0.1.22"
syn = { version = "2.0.108", features = ["full", "extra-traits"] }
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-fancy", "plist-load", "yaml-load"] }
tar = "0.4.44"
tempfile = "3.23.0"
thin-vec = "0.2.14"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tiny_http = "0.12.0"
tiny-skia = "0.11.4"
toml = { version = "0.9.8", default-features = false, features = ["parse", "display", "serde"] }
ttf-parser = "0.25.1"
two-face = { version = "0.4.4", default-features = false, features = ["syntect-fancy"] }
typed-arena = "2.0.2"
unicode-bidi = "0.3.18"
unicode-ident = "1.0.20"
unicode-math-class = "0.1.0"
unicode-script = "0.5.8"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
unscanny = "0.1.0"
ureq = { version = "3.1.2", default-features = false, features = ["native-tls", "gzip", "json", "socks-proxy"] }
usvg = { version = "0.45.1", default-features = false, features = ["text"] }
utf8_iter = "1.0.4"
walkdir = "2.5.0"
wasmi = { version = "1.0.0", default-features = false, features = ["simd"] }
web-sys = "0.3.83"
xmlparser = "0.13.6"
xmlwriter = "0.1.0"
xz2 = { version = "0.1.7", features = ["static"] }
yaml-front-matter = "0.1.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."typst-cli"]
strip = true

[workspace.lints.clippy]
blocks_in_conditions = "allow"
comparison_chain = "allow"
iter_over_hash_type = "warn"
manual_is_multiple_of = "allow"
manual_range_contains = "allow"
mutable_key_type = "allow"
uninlined_format_args = "warn"
wildcard_in_or_patterns = "allow"
# See https://github.com/typst/typst/pull/6560#issuecomment-3045393640
derived_hash_with_manual_eq = "allow"
